@@ -1,21 +1,18 @@
 package com.projetTransversalIsi.user.infrastructure;
 
-import com.projetTransversalIsi.profil.domain.Profile;
 import com.projetTransversalIsi.profil.infrastructure.JpaProfileEntity;
 import com.projetTransversalIsi.security.domain.EnumRole;
-import com.projetTransversalIsi.security.domain.Permission;
-import com.projetTransversalIsi.security.domain.Role;
 import com.projetTransversalIsi.security.infrastructure.JpaPermissionEntity;
 import com.projetTransversalIsi.security.infrastructure.JpaRoleEntity;
 import com.projetTransversalIsi.user.domain.User;
 import com.projetTransversalIsi.user.domain.UserRepository;
 import com.projetTransversalIsi.user.domain.exceptions.UserNotFoundException;
 import jakarta.persistence.EntityManager;
-import lombok.AllArgsConstructor;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Repository;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -31,18 +28,27 @@ public class JpaUserRepository implements UserRepository {
     private  final EntityManager entityManager;
 
     @Override
-    public User save(User user, String password, Set<Permission> permission, Profile profil){
+    public User registerNewUser(User user){
         JpaRoleEntity jpaRole= entityManager.getReference(JpaRoleEntity.class,user.getRole().getName());
-        JpaProfileEntity jpaProfile= entityManager.getReference(JpaProfileEntity.class,profil.getId());
-        Set<JpaPermissionEntity> jpaPermissions = permission.stream()
-                .map(perm -> entityManager.getReference(JpaPermissionEntity.class, perm.getName()))
-                .collect(Collectors.toSet());
-        JpaUserEntity jpaUser= userMapper.UserToJpaUserEntity(user,password,jpaRole,jpaPermissions,jpaProfile);
+        JpaProfileEntity jpaProfile = user.getProfileId() == null ? null : entityManager.getReference(JpaProfileEntity.class, user.getProfileId());
+        Set<JpaPermissionEntity> jpaPermissions = user.getPermissions() == null ? Set.of() : user.getPermissions().stream()
+                        .map(perm -> entityManager.getReference(JpaPermissionEntity.class, perm.getName()))
+                        .collect(Collectors.toSet());
+        JpaUserEntity jpaUser= userMapper.UserToJpaUserEntity(user, jpaProfile);
         JpaUserEntity newEntity= jpaRepo.save(jpaUser);
 
         log.info(newEntity.toString());
         return  userMapper.JpaUseEntityToUser(newEntity);
     }
+
+    @Override
+    public void save(User user) {
+        JpaProfileEntity jpaProfile= entityManager.getReference(JpaProfileEntity.class,user.getProfileId());
+        JpaUserEntity savedEntity = jpaRepo.save(userMapper.UserToJpaUserEntity(user,jpaProfile));
+        log.info("User updated: {}", savedEntity.getId());
+
+    }
+
 
 
     @Override
@@ -67,7 +73,20 @@ public class JpaUserRepository implements UserRepository {
 
     @Override
     public List<User> getAllUserOfStaff(){
-        return jpaRepo.findByRoleIdNotIn(List.of(EnumRole.ADMIN.name(),EnumRole.SUPER_ADMIN.name(),EnumRole.STUDENT.name())).stream().map(userMapper::JpaUseEntityToUser).toList();
+        return jpaRepo.findByRoleIdNotIn(List.of(EnumRole.ADMIN.name(),EnumRole.STUDENT.name())).stream().map(userMapper::JpaUseEntityToUser).toList();
+    }
+    @Override
+    public List<User> findAllDeleted() {
+        return jpaRepo.findByDeletedTrue().stream()
+                .map(userMapper::JpaUseEntityToUser)
+                .collect(Collectors.toList());
     }
 
+
+    @Override
+    public List<User> findDeletedSince(LocalDateTime since) {
+        return jpaRepo.findDeletedSince(since).stream()
+                .map(userMapper::JpaUseEntityToUser)
+                .collect(Collectors.toList());
+    }
 }
